--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
           placeholder="Enter your message here"
           rows="3"
           required
-        >
-        </textarea>
+        ></textarea>
 
         <p><button type="submit">Submit</button></p>
       </fieldset>
