--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Contact Me!</title>
   </head>
   <body>
-    <h1>Contact Nicholas</h1>
+    <h1>Contact Naomi</h1>
     <p>
       Please fill out the below form with as much detail as possible. I will
       return your message as soon as I am able!
